home app refactored

--- a/home/templates/page_site_home_v1.html
+++ b/home/templates/page_site_home_v1.html
@@ -41,7 +41,7 @@
 		<h3>{% trans "Recent Joined Members:" %}</h3>
 		
 		{% for member in recent_members %}
-			{% include "member_item.html" %}
+			{% include "item_box_member.html" %}
 		{% endfor %}
 		
 	</div>
