Renamed all templates for group app

--- a/group/templates/page_group_view.html
+++ b/group/templates/page_group_view.html
@@ -22,7 +22,7 @@
 				{% endif %}
 			</h2>
 	</div>
-	{% include "topic_list.html" %}
+	{% include "set_list_topic.html" %}
 {% endblock %}
 
 {% block sidebar %}
