--- a/group/templates/page_groupsite_view_master.html
+++ b/group/templates/page_groupsite_view_master.html
@@ -23,7 +23,7 @@
 			{% endblock %}
 		</ul>
 	</div>
-	{% include "topic_list.html" %}
+	{% include "set_list_topic.html" %}
 {% endblock %}
 
 {% block sidebar %}
@@ -70,7 +70,7 @@
 		{% if joined_groups %}
 			<div id="groups" class="grid_9 dashboard_widget">
 				
-				{% include "joined_groups_box.html" %}
+				{% include "widget_joined_groups.html" %}
         	
 				<p class="clear"></p>
 			</div>
