--- a/group/templates/widget_joined_groups.html
+++ b/group/templates/widget_joined_groups.html
@@ -2,5 +2,5 @@
 
 <h3>{% trans "Followed Groups" %}:</h3>
 {% for group in joined_groups %}
-	{% include "group_item.html" %}
+	{% include "item_box_group.html" %}
 {% endfor %}
