reformatted css file

--- a/common/templates/page_master.html
+++ b/common/templates/page_master.html
@@ -16,7 +16,7 @@
 	
 	<style type="text/css" media="screen">
 		body.user_style{
-			background:#333 url("/images/themes/theme1/background-main.png") no-repeat;
+			background:#C4E9FA url("/images/themes/theme1/background-main.png") no-repeat;
 		}
 	</style>
 	<title>{% block title %}
