--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -101,6 +101,7 @@
   background: -webkit-gradient(linear, left top, left bottom, from(#333), to(#111));
   background: -moz-linear-gradient(top, #333, #111);
   background: transparent\9;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333',endColorstr='#111111');
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5)
