--- a/common/templates/page_master.html
+++ b/common/templates/page_master.html
@@ -13,12 +13,14 @@
 	<link rel="stylesheet" href="/css/daoshicha.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	
 	<script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	
+	<script type="text/javascript" charset="utf-8" src="/javascript/libs/mustache.js"></script>
+		
 	<style type="text/css" media="screen">
 		body.user_style{
 			background:#C4E9FA url("/images/themes/theme1/background-main.png") no-repeat;
 		}
 	</style>
+	
 	<title>{% block title %}
 		Enjoy it :-)
 	{% endblock %}</title>
