--- a/home/templates/page_site_home_v1.html
+++ b/home/templates/page_site_home_v1.html
@@ -5,6 +5,7 @@
 
 {% block html_head %}
 	<script type="text/javascript" charset="utf-8" src="/javascript/topic.js"></script>
+	<script type="text/javascript" charset="utf-8" src="/javascript/user_stream.js"></script>
 {% endblock %}
 
 {% block left_panel %}
