--- a/common/templates/page_master.html
+++ b/common/templates/page_master.html
@@ -10,11 +10,15 @@
 	<link rel="stylesheet" href="/css/sen.extra.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/sen.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/960.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="/css/flick/jquery-ui-1.8.11.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/daoshicha.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	
 	<script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+	<script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="/javascript/libs/mustache.js"></script>
-		
+	<script type="text/javascript" charset="utf-8" src="/javascript/chrisw.js"></script>
+	<script type="text/javascript" charset="utf-8" src="/javascript/templates.js"></script>
+			
 	<style type="text/css" media="screen">
 		body.user_style{
 			background:#C4E9FA url("/images/themes/theme1/background-main.png") no-repeat;
